[package]
name = "Task2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
titan-client = "0.1.31"
anyhow = "1.0.99"
titan-types = "0.1.26" # остання версія